--- a/backend/apis/test_images.html
+++ b/backend/apis/test_images.html
@@ -363,7 +363,9 @@ class TestImages:
                 f&#34;Still got {code} with {data}&#34;
             )
 
-    @pytest.mark.skip_version_if(&#34;&gt; v1.2.0&#34;, &#34;&lt;= v1.4.0&#34;, reason=&#34;Issue#4293 fix after `v1.4.0`&#34;)
+    @pytest.mark.skip_version_if(
+            &#34;&gt; v1.2.0&#34;, &#34;&lt;= v1.4.0&#34;,
+            reason=&#34;https://github.com/harvester/harvester/issues/4293 fix after `v1.4.0`&#34;)
     @pytest.mark.dependency(depends=[&#34;create_image&#34;, &#34;get_image&#34;, &#34;delete_image&#34;])
     @parametrize_with_cases(&#34;unique_name&#34;, cases=CasesImages, has_tag=&#39;unique-name&#39;)
     def test_create_with_reuse_display_name(
@@ -430,7 +432,9 @@ def test_create(self, api_client, unique_name, fake_image_file):
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.skip_version_if(&#34;&gt; v1.2.0&#34;, &#34;&lt;= v1.4.0&#34;, reason=&#34;Issue#4293 fix after `v1.4.0`&#34;)
+<pre><code class="python">@pytest.mark.skip_version_if(
+        &#34;&gt; v1.2.0&#34;, &#34;&lt;= v1.4.0&#34;,
+        reason=&#34;https://github.com/harvester/harvester/issues/4293 fix after `v1.4.0`&#34;)
 @pytest.mark.dependency(depends=[&#34;create_image&#34;, &#34;get_image&#34;, &#34;delete_image&#34;])
 @parametrize_with_cases(&#34;unique_name&#34;, cases=CasesImages, has_tag=&#39;unique-name&#39;)
 def test_create_with_reuse_display_name(
