--- a/backend/integrations/test_4_vm_backup_restore.html
+++ b/backend/integrations/test_4_vm_backup_restore.html
@@ -1170,7 +1170,7 @@ def tests_backup_vm(self, api_client, wait_timeout, backup_config, base_vm_with_
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.skip(&#34;https://github.com/harvester/harvester/issues/1473&#34;)
+<pre><code class="python">@pytest.mark.xfail(reason=&#34;https://github.com/harvester/harvester/issues/1473&#34;)
 @pytest.mark.p0
 @pytest.mark.sanity
 @pytest.mark.backup_target
