--- a/backend/integrations/test_3_vm.html
+++ b/backend/integrations/test_3_vm.html
@@ -505,7 +505,7 @@ def vm_network(api_client, unique_name, cluster_network, vlan_id, network_checke
 @pytest.mark.networks
 @pytest.mark.settings
 @pytest.mark.virtualmachines
-@pytest.mark.skip_version_if(&#34;&lt; v1.0.3&#34;)
+@pytest.mark.skip_if_version(&#34;&lt; v1.0.3&#34;)
 class TestVMWithStorageNetwork:
     def test_enable_storage_network_with_api_stopped_vm(
         self, api_client, minimal_vm, storage_network, setting_checker, vm_checker, volume_checker
