--- a/backend/apis/test_settings.html
+++ b/backend/apis/test_settings.html
@@ -79,7 +79,7 @@ def test_get_all_settings(api_client, expected_settings):
 </summary>
 <pre><code class="python">@pytest.mark.p0
 @pytest.mark.settings
-@pytest.mark.skip_version_if(&#34;&lt; v1.1.0&#34;)
+@pytest.mark.skip_if_version(&#34;&lt; v1.1.0&#34;)
 def test_get_all_settings_v110(api_client, expected_settings):
     expected_settings = expected_settings[&#39;default&#39;] | expected_settings[&#39;1.1.0&#39;]
     code, data = api_client.settings.get()
@@ -397,9 +397,9 @@ class TestUpdateInvalidStorageNetwork:
 @pytest.mark.sanity
 @pytest.mark.settings
 class TestUpdateKubeconfigDefaultToken:
-    @pytest.mark.skip_version_if(
-            &#34;&lt; v1.3.2&#34;,
-            reason=&#34;https://github.com/harvester/harvester/issues/5891 fixed after v1.3.2&#34;)
+    @pytest.mark.skip_if_version(
+            &#34;&lt; v1.3.1&#34;,
+            reason=&#34;https://github.com/harvester/harvester/issues/5891 fixed after v1.3.1&#34;)
     def test_invalid_kubeconfig_ttl_min(self, api_client):
         KubeconfigTTLMinSpec = api_client.settings.KubeconfigDefaultTokenTTLSpec.TTL
         spec = KubeconfigTTLMinSpec(99999999999999)
@@ -409,7 +409,7 @@ class TestUpdateKubeconfigDefaultToken:
             f&#34;API Status({code}): {data}&#34;
         )
 
-    @pytest.mark.skip_version_if(&#34;&lt; v1.3.1&#34;)
+    @pytest.mark.skip_if_version(&#34;&lt; v1.3.1&#34;)
     def test_valid_kubeconfig_ttl_min(self, api_client):
         KubeconfigTTLMinSpec = api_client.settings.KubeconfigDefaultTokenTTLSpec.TTL
         spec = KubeconfigTTLMinSpec(172800)
@@ -437,9 +437,9 @@ class TestUpdateKubeconfigDefaultToken:
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.skip_version_if(
-        &#34;&lt; v1.3.2&#34;,
-        reason=&#34;https://github.com/harvester/harvester/issues/5891 fixed after v1.3.2&#34;)
+<pre><code class="python">@pytest.mark.skip_if_version(
+        &#34;&lt; v1.3.1&#34;,
+        reason=&#34;https://github.com/harvester/harvester/issues/5891 fixed after v1.3.1&#34;)
 def test_invalid_kubeconfig_ttl_min(self, api_client):
     KubeconfigTTLMinSpec = api_client.settings.KubeconfigDefaultTokenTTLSpec.TTL
     spec = KubeconfigTTLMinSpec(99999999999999)
@@ -459,7 +459,7 @@ def test_invalid_kubeconfig_ttl_min(self, api_client):
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.skip_version_if(&#34;&lt; v1.3.1&#34;)
+<pre><code class="python">@pytest.mark.skip_if_version(&#34;&lt; v1.3.1&#34;)
 def test_valid_kubeconfig_ttl_min(self, api_client):
     KubeconfigTTLMinSpec = api_client.settings.KubeconfigDefaultTokenTTLSpec.TTL
     spec = KubeconfigTTLMinSpec(172800)
