--- a/backend/apis/test_volumes.html
+++ b/backend/apis/test_volumes.html
@@ -319,7 +319,7 @@ class TestVolumesNegative:
         assert 422 == code, (code, data)
         assert &#34;Invalid&#34; == data.get(&#34;code&#34;), (code, data)
 
-    @pytest.mark.skip_version_if(
+    @pytest.mark.skip_if_version(
             &#34;&gt;= v1.4.0&#34;,
             reason=&#34;https://github.com/harvester/harvester/issues/7030, breaking changes&#34;)
     def test_create_without_name(self, api_client):
@@ -351,7 +351,7 @@ class TestVolumesNegative:
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.skip_version_if(
+<pre><code class="python">@pytest.mark.skip_if_version(
         &#34;&gt;= v1.4.0&#34;,
         reason=&#34;https://github.com/harvester/harvester/issues/7030, breaking changes&#34;)
 def test_create_without_name(self, api_client):
