--- a/backend/integrations/test_0_storage_network.html
+++ b/backend/integrations/test_0_storage_network.html
@@ -126,7 +126,7 @@ def cluster_network(request, api_client, unique_name):
 @pytest.mark.smoke
 @pytest.mark.settings
 @pytest.mark.networks
-@pytest.mark.skip_version_if(&#34;&lt; v1.0.3&#34;)
+@pytest.mark.skip_if_version(&#34;&lt; v1.0.3&#34;)
 def test_disable_storage_network(api_client, setting_checker):
     disable_spec = api_client.settings.StorageNetworkSpec.disable()
     code, data = api_client.settings.update(&#39;storage-network&#39;, disable_spec)
@@ -150,7 +150,7 @@ def test_disable_storage_network(api_client, setting_checker):
 @pytest.mark.smoke
 @pytest.mark.settings
 @pytest.mark.networks
-@pytest.mark.skip_version_if(&#34;&lt; v1.0.3&#34;)
+@pytest.mark.skip_if_version(&#34;&lt; v1.0.3&#34;)
 def test_enable_storage_network(
     api_client, cluster_network, vlan_id, unique_name, wait_timeout,
     setting_checker, network_checker
