--- a/backend/integrations/test_4_vm_host_cpu_pinning.html
+++ b/backend/integrations/test_4_vm_host_cpu_pinning.html
@@ -421,7 +421,7 @@ class TestPinCPUonVM:
             f&#34;API Status({code}): {data}&#34;
         )
 
-    @pytest.mark.skip_version_if(
+    @pytest.mark.skip_if_version(
             &#34;&gt;= v1.7.0&#34;, &#34;&lt; v1.8.0&#34;, reason=&#34;https://github.com/harvester/harvester/issues/9557&#34;)
     @pytest.mark.negative
     @pytest.mark.dependency(depends=[&#34;pin_cpu_on_vm&#34;])
@@ -465,7 +465,7 @@ class TestPinCPUonVM:
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.skip_version_if(
+<pre><code class="python">@pytest.mark.skip_if_version(
         &#34;&gt;= v1.7.0&#34;, &#34;&lt; v1.8.0&#34;, reason=&#34;https://github.com/harvester/harvester/issues/9557&#34;)
 @pytest.mark.negative
 @pytest.mark.dependency(depends=[&#34;pin_cpu_on_vm&#34;])
