--- a/backend/integrations/test_9_rancher_integration.html
+++ b/backend/integrations/test_9_rancher_integration.html
@@ -2007,6 +2007,7 @@ class TestResourceQuota:
         assert ns_quota[&#39;limitsCpu&#39;] == spec.namespace_quota.cpu_limit
         assert ns_quota[&#39;limitsMemory&#39;] == spec.namespace_quota.mem_limit
 
+    @pytest.mark.xfail(reason=&#34;test issue https://github.com/harvester/tests/issues/2376&#34;)
     @pytest.mark.dependency(name=&#34;create_namespace&#34;, depends=[&#34;create_project&#34;])
     def test_create_namespace_on_project(
         self, api_client, rancher_api_client, unique_name, harvester_mgmt_cluster
@@ -2148,7 +2149,8 @@ class TestResourceQuota:
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.dependency(name=&#34;create_namespace&#34;, depends=[&#34;create_project&#34;])
+<pre><code class="python">@pytest.mark.xfail(reason=&#34;test issue https://github.com/harvester/tests/issues/2376&#34;)
+@pytest.mark.dependency(name=&#34;create_namespace&#34;, depends=[&#34;create_project&#34;])
 def test_create_namespace_on_project(
     self, api_client, rancher_api_client, unique_name, harvester_mgmt_cluster
 ):
