--- a/backend/integrations/test_4_vm_template.html
+++ b/backend/integrations/test_4_vm_template.html
@@ -146,6 +146,7 @@ def stopped_vm(api_client, ssh_keypair, wait_timeout, image, unique_name):
 @pytest.mark.templates
 @pytest.mark.virtualmachines
 class TestVMTemplate:
+    @pytest.mark.xfail(reason=&#34;test issue https://github.com/harvester/tests/issues/2388&#34;)
     def test_create_template_with_data(
         self, api_client, vm_shell_from_host, vm_checker, ssh_keypair, wait_timeout, stopped_vm
     ):
@@ -286,7 +287,8 @@ class TestVMTemplate:
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">def test_create_template_with_data(
+<pre><code class="python">@pytest.mark.xfail(reason=&#34;test issue https://github.com/harvester/tests/issues/2388&#34;)
+def test_create_template_with_data(
     self, api_client, vm_shell_from_host, vm_checker, ssh_keypair, wait_timeout, stopped_vm
 ):
     &#34;&#34;&#34; ref: https://github.com/harvester/tests/issues/1194
