--- a/backend/integrations/test_1_volumes.html
+++ b/backend/integrations/test_1_volumes.html
@@ -314,8 +314,8 @@ Ref. <a href="https://github.com/harvester/tests/issues/1121">https://github.com
     {&#34;size&#34;: &#34;invalid_size&#34;, &#34;error_msg&#34;: &#34;quantities must match&#34;},
     pytest.param(
         {&#34;size&#34;: &#34;999999Ti&#34;, &#34;error_msg&#34;: &#34;exceeds cluster capacity&#34;},
-        marks=pytest.mark.xfail_if_version(
-            &#34;&gt;= v1.6.1&#34;, reason=&#34;https://github.com/harvester/harvester/issues/9268 since v1.6.1&#34;)
+        marks=pytest.mark.xfail(
+            reason=&#34;https://github.com/harvester/harvester/issues/9268&#34;)
     )],
     ids=[&#39;zero_size&#39;, &#39;negative_size&#39;, &#39;not_number&#39;, &#39;too_large_size&#39;])
 def test_create_volume_invalid_specifications(api_client, gen_unique_name, invalid_spec):
